# DSAN6700-Week1-Problem3

./: .buildinfo  .pre-commit-config.yaml  README.md  _config.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: mailer-ci.yml
_sources/autoapi/: index.rst.txt
_sources/autoapi/my_email/: index.rst.txt
_sources/autoapi/my_email/alert/: index.rst.txt
_sources/autoapi/my_email/mailer/: index.rst.txt
autoapi/: index.html
autoapi/my_email/: index.html
autoapi/my_email/alert/: index.html
autoapi/my_email/mailer/: index.html
docs/source/: conf.py  index.rst
my_email/: alert.py  mailer.py
