[tool.poetry]
name = "my_email"
version = "0.1.0"
description = ""
authors = ["mouwumou <mouwumou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.doc.dependencies]
myst-nb = {version = "^1.1.1", python = "^3.9"}
sphinx-autoapi = "^3.3.1"
sphinx-rtd-theme = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
